@startuml

title __GAME's Class Diagram__\n


    namespace game {
      abstract class game.Handler {
          + Handler()
          + getProcessor()
          {abstract} + handle()
      }
    }



    namespace game {
      class game.LossHendler {
          + LossHendler()
          + handle()
      }
    }

  


    namespace name {
      class game.NegativeHandler {
          + NegativeHandler()
          + handle()
      }
    }

  


    namespace name {
      class game.PositiveHandler {
          + PositiveHandler()
          + handle()
      }
    }

  

  game.Handler o-- game.Handler : processor
  game.LossHendler -up-|> game.Handler
  game.NegativeHandler -up-|> game.Handler
  game.PositiveHandler -up-|> game.Handler


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
